2014-01-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v int] Use "fake-cluster-control 0" more.

	* Makefile.am (kill-daemon): Use ‘$(CTL) 0’.
	* fake-cluster-control (z): Delete command.

2014-01-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Handle daemon-down case where pidfile exists but is stale.

	* fake-cluster-control (0): If pidfile exists but "ps PID"
	fails, don't try to kill PID; instead, simply remove pidfile.

2014-01-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq] Fix bug: Make ‘pg-result-error-field’ DTRT.

	* basic.scm (test:known-bad-command):
	Test ‘pg-result-error-field’ rv explicitly.

2014-01-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Drop procs: pg-{getline,getlineasync,putline,endcopy}

	* basic.scm (test:getline, test:getlineasync)
	(test:putline): Delete procs.
	(main): Update expected-pass number.

2014-01-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Use pg-put-copy-{data,end} for async retrieval test.

	* basic.scm (test:asynchronous-retrieval): ...here,
	instead of ‘pg-putline’ and ‘pg-endcopy’;
	also, do/check ‘pg-get-result’ after ‘pg-put-copy-end’.

2014-01-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v int] Rework loop to call ‘pg-flush’ inside.

	* basic.scm (test:asynchronous-retrieval): ...here.

2014-01-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Do/check ‘pg-get-result’ after ‘pg-put-copy-end’.

	* basic.scm (test:put-copy-data/end): ...here.

2014-01-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] No longer send "\\.\n" for COPY..STDIN.

	* basic.scm (test:put-copy-data/end, test:putline)
	(test:asynchronous-retrieval): Don't send "\\.\n".

2014-01-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v int] Stash validated protocol version.

	* basic.scm (PVERS): New var.
	(test:protocol-version): Set ‘PVERS’.
	(test:transaction-status, test:set-error-verbosity)
	(test:fnumber-and-friends, test:pg-exec-params)
	(test:pg-exec-prepared, test:pg-exec-prepared)
	(test:asynchronous-notification)
	(test:asynchronous-retrieval): Use ‘PVERS’.
